# oecd

./: .gitignore  README.md  general.py  main.py  process_dataset.py  pyproject.toml
.state/iceberg/: activation_requirements_strictness.json
.state/local/: activation_requirements_strictness.json
assets/activation_requirements_strictness/: main.py
assets/adult_inactivity_rates/: main.py
assets/adult_students_by_age/: main.py
assets/adult_training_regions/: main.py
assets/adult_unemployment_rates/: main.py
assets/afdd_direct_investment_returns/: main.py
assets/afdd_ecological_sustainability/: main.py
assets/afdd_export_diversification/: main.py
assets/afdd_external_financial_inflows/: main.py
assets/afdd_ghg_emissions_sector/: main.py
assets/afdd_global_regional_trade/: main.py
assets/afdd_growth_decomposition_expenditure/: main.py
assets/afdd_investment_capital_stock/: main.py
assets/afdd_public_finances/: main.py
assets/afdd_trade_manufacturing_intensity/: main.py
assets/africa_basic_education/: main.py
assets/africa_basic_health_indicators/: main.py
assets/africa_communications_infrastructure/: main.py
assets/africa_demographic_estimates/: main.py
assets/africa_development_all_tables/: main.py
assets/africa_development_dynamics_historic/: main.py
assets/africa_digitalisation/: main.py
defs/: concepts.json  concepts_exhaustive.json  dataset_name_mapping.csv  structures.json
scripts/: download_concepts.py  download_dataflows.py  download_structures.py  generate_dataset_name_mapping.py  scaffold_assets.py
(+1364 files in other folders)
